--- a/press/index.html
+++ b/press/index.html
@@ -389,7 +389,7 @@
             </p>
         </div>
         <div class="hero-image">
-            <div class="app-icon">[App Icon]</div>
+            <img src="/assets/app-icon.png" alt="Meatballs app icon" style="width: 160px; height: 160px; border-radius: 36px;">
         </div>
     </section>
 
