--- a/press/index.html
+++ b/press/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -381,7 +382,7 @@
             <p class="hero-eyebrow">Press Kit</p>
             <h1 class="hero-headline">The world's comfort food, in one app</h1>
             <p class="hero-subheadline">
-                Meatballs is a curated recipe app exploring one dish across 47 countries. Not a database of thousands—a book of 47, each with its cultural story. Built in Stockholm by one person who started with his grandmother's recipe.
+                Meatballs is a book that happens to be an app, exploring one dish across 47 countries. 47 recipes, each with its cultural story. Built in Stockholm by one person who started with his grandmother's recipe.
             </p>
             <!-- Quick facts inline -->
             <p style="font-size: 14px; opacity: 0.6; margin-top: 24px; line-height: 1.8;">
@@ -399,7 +400,7 @@
             <details style="background: #EDE4D8; border-radius: 8px; padding: 20px 24px;">
                 <summary style="cursor: pointer; font-size: 14px; font-weight: 700; opacity: 0.7;">Copy-paste summary for articles</summary>
                 <p style="font-size: 15px; line-height: 1.8; margin-top: 16px; padding-top: 16px; border-top: 1px solid rgba(31,31,31,0.1);">
-                    <strong>Meatballs</strong> is an iOS app with 47 meatball recipes from 47 countries—each with cultural context and history. Created by a Swedish developer inspired by his grandmother's köttbullar. One-time purchase (29 kr / $2.99), no subscriptions, no ads, no tracking. Available on the App Store.
+                    <strong>Meatballs</strong> is an iOS app with 47 meatball recipes from 47 countries -each with cultural context and history. Created by a Swedish developer inspired by his grandmother's köttbullar. One-time purchase (29 kr / $2.99), no subscriptions, no ads, no tracking. Available on the App Store.
                 </p>
             </details>
         </div>
@@ -413,16 +414,16 @@
                 <h2 class="section-title" style="color: #F6EFE6;">It started with a grandmother's kitchen</h2>
 
                 <p style="font-size: 17px; margin-bottom: 24px; opacity: 0.85; line-height: 1.8;">
-                    The smell of sizzling meat. The sound of a pan. The feeling of being exactly where you belong. That's where Meatballs started—with a memory of my grandmother's Swedish köttbullar.
+                    The smell of sizzling meat. The sound of a pan. The feeling of being exactly where you belong. That's where Meatballs started -with a memory of my grandmother's Swedish köttbullar.
                 </p>
 
                 <p style="font-size: 17px; opacity: 0.85; line-height: 1.8;">
-                    Then I discovered something: every culture has this dish. Kofta in Lebanon. Polpette in Italy. Albondigas in Mexico. Tsukune in Japan. Different spices, different techniques—but the same meaning everywhere. Comfort. Family. Home.
+                    Then I discovered something: every culture has this dish. Kofta in Lebanon. Polpette in Italy. Albondigas in Mexico. Tsukune in Japan. Different spices, different techniques -but the same meaning everywhere. Comfort. Family. Home.
                 </p>
             </div>
             <div style="padding-top: 48px;">
                 <blockquote style="font-size: 22px; font-style: italic; border-left: 3px solid #F6EFE6; padding-left: 24px; margin-bottom: 40px; opacity: 0.9; line-height: 1.6;">
-                    "Food apps have become content factories. I wanted the opposite—a book that happens to be an app. Where the notes matter. Where the history matters."
+                    "Food apps have become content factories. I wanted the opposite -a book that happens to be an app. Where the notes matter. Where the history matters."
                 </blockquote>
 
                 <p style="font-size: 17px; opacity: 0.85; line-height: 1.8;">
@@ -446,7 +447,7 @@
                 </div>
                 <div class="difference-item">
                     <h3>Cultural context, not just ingredients</h3>
-                    <p>Every recipe includes the story—where the dish comes from, how it's traditionally served, what it means in that culture. Food as anthropology.</p>
+                    <p>Every recipe includes the story -where the dish comes from, how it's traditionally served, what it means in that culture. Food as anthropology.</p>
                 </div>
                 <div class="difference-item">
                     <h3>Buy once, own forever</h3>
@@ -491,7 +492,7 @@
         <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 32px; margin-top: 48px;">
             <div style="background: #EDE4D8; padding: 28px; border-radius: 12px;">
                 <h3 style="font-size: 16px; font-weight: 700; margin-bottom: 12px;">The nostalgia angle</h3>
-                <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">A Swedish developer builds an app based on memories of his grandmother's kitchen—and discovers the whole world shares the same comfort food.</p>
+                <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">A Swedish developer builds an app based on memories of his grandmother's kitchen -and discovers the whole world shares the same comfort food.</p>
             </div>
             <div style="background: #EDE4D8; padding: 28px; border-radius: 12px;">
                 <h3 style="font-size: 16px; font-weight: 700; margin-bottom: 12px;">The anti-subscription angle</h3>
@@ -503,7 +504,7 @@
             </div>
             <div style="background: #EDE4D8; padding: 28px; border-radius: 12px;">
                 <h3 style="font-size: 16px; font-weight: 700; margin-bottom: 12px;">The food-as-culture angle</h3>
-                <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">How one humble dish—ground meat rolled into balls—became comfort food on every continent. An anthropological journey through the kitchen.</p>
+                <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">How one humble dish -ground meat rolled into balls -became comfort food on every continent. An anthropological journey through the kitchen.</p>
             </div>
         </div>
     </section>
@@ -515,10 +516,10 @@
 
         <div style="margin-top: 40px;">
             <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #1F1F1F; padding-left: 24px; margin-bottom: 32px; opacity: 0.85;">
-                "It started in my grandmother's kitchen. That smell, that feeling—I realized every culture has that. Kofta, polpette, albondigas. Different names, same meaning: home."
+                "It started in my grandmother's kitchen. That smell, that feeling -I realized every culture has that. Kofta, polpette, albondigas. Different names, same meaning: home."
             </blockquote>
             <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #1F1F1F; padding-left: 24px; margin-bottom: 32px; opacity: 0.85;">
-                "Food apps have become content factories. I wanted the opposite—a book that happens to be an app. Where quality beats quantity."
+                "Food apps have become content factories. I wanted the opposite -a book that happens to be an app. Where quality beats quantity."
             </blockquote>
             <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #1F1F1F; padding-left: 24px; opacity: 0.85;">
                 "47 countries, 47 recipes. That's it. The constraint is the whole point. It forces you to be thoughtful about what you include."
