--- a/press/index.html
+++ b/press/index.html
@@ -468,15 +468,9 @@
             <h2 class="section-title">A quick look inside</h2>
 
             <div class="screenshots-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 32px; margin-top: 48px;">
-                <div style="background: #EDE4D8; border-radius: 24px; aspect-ratio: 9/19.5; display: flex; align-items: center; justify-content: center; font-size: 13px; opacity: 0.5; overflow: hidden;">
-                    [Screenshot 1: Recipe list]
-                </div>
-                <div style="background: #EDE4D8; border-radius: 24px; aspect-ratio: 9/19.5; display: flex; align-items: center; justify-content: center; font-size: 13px; opacity: 0.5; overflow: hidden;">
-                    [Screenshot 2: Recipe detail]
-                </div>
-                <div style="background: #EDE4D8; border-radius: 24px; aspect-ratio: 9/19.5; display: flex; align-items: center; justify-content: center; font-size: 13px; opacity: 0.5; overflow: hidden;">
-                    [Screenshot 3: Cook mode]
-                </div>
+                <img src="/assets/Screen1.png" alt="Meatballs app - Recipe list" style="width: 100%; border-radius: 24px;">
+                <img src="/assets/Screen2.png" alt="Meatballs app - Recipe detail" style="width: 100%; border-radius: 24px;">
+                <img src="/assets/Screen3.png" alt="Meatballs app - Cook mode" style="width: 100%; border-radius: 24px;">
             </div>
             <p style="text-align: center; margin-top: 24px; font-size: 14px; opacity: 0.5;">
                 High-resolution versions available in <a href="/press/screenshots.zip" style="color: #1F1F1F;">Press Assets</a>
