--- a/index.html
+++ b/index.html
@@ -376,9 +376,7 @@
             <p style="margin-top: 16px; font-size: 13px; opacity: 0.5;">29 kr. Yours forever.</p>
         </div>
         <div class="hero-image">
-            <div class="phone-mockup">
-                [Phone with app screenshot]
-            </div>
+            <img src="/assets/Screen2.png" alt="Meatballs app" style="max-width: 320px; width: 100%; border-radius: 32px; border: 1px solid rgba(31, 31, 31, 0.12);">
         </div>
     </section>
 
