--- a/index.html
+++ b/index.html
@@ -336,16 +336,58 @@
             .hero {
                 flex-direction: column;
                 text-align: center;
-                padding: 60px 24px 80px;
+                padding: 40px 24px 60px;
+                min-height: auto;
             }
 
             .hero-content {
                 max-width: 100%;
-                margin-bottom: 60px;
+                margin-bottom: 40px;
             }
 
             .hero-headline {
-                font-size: 36px;
+                font-size: 28px;
+                line-height: 1.25;
+            }
+
+            .hero-subheadline {
+                font-size: 18px;
+            }
+
+            .hero-image {
+                justify-content: center;
+            }
+
+            .screenshot-carousel {
+                max-width: 260px !important;
+            }
+
+            .scroll-indicator {
+                padding-bottom: 40px;
+            }
+
+            .story {
+                padding: 60px 24px;
+            }
+
+            .story-quote {
+                font-size: 24px;
+            }
+
+            .story-text {
+                font-size: 16px;
+            }
+
+            .features {
+                padding: 60px 24px;
+            }
+
+            .features-header {
+                margin-bottom: 48px;
+            }
+
+            .features-title {
+                font-size: 28px;
             }
 
             .features-grid {
@@ -353,8 +395,38 @@
                 gap: 32px;
             }
 
+            .feature {
+                padding: 24px 0;
+            }
+
+            .countries {
+                padding: 60px 24px;
+            }
+
+            .countries-title {
+                font-size: 28px;
+            }
+
             .countries-grid {
                 grid-template-columns: repeat(2, 1fr);
+                gap: 16px;
+            }
+
+            .country-card {
+                padding: 20px 16px;
+            }
+
+            footer {
+                padding: 48px 24px;
+            }
+
+            .footer-cta {
+                font-size: 20px;
+            }
+
+            .footer-links a {
+                margin: 0 12px;
+                font-size: 13px;
             }
 
             header {
