--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         body {
             font-family: 'Libre Caslon Text', Georgia, serif;
-            background-color: #F6EFE6;
-            color: #1F1F1F;
+            background-color: #1F1F1F;
+            color: #F6EFE6;
             line-height: 1.6;
         }
 
@@ -40,7 +40,7 @@
         nav a {
             margin-left: 32px;
             text-decoration: none;
-            color: #1F1F1F;
+            color: #F6EFE6;
             opacity: 0.6;
             font-size: 14px;
             transition: opacity 0.2s;
@@ -107,13 +107,13 @@
             max-width: 380px;
             width: 100%;
             /* Placeholder - replace with actual image */
-            background: linear-gradient(135deg, #E8DFD4 0%, #D4C9BC 100%);
+            background: linear-gradient(135deg, #3a3836 0%, #2a2826 100%);
             border-radius: 40px;
             aspect-ratio: 9/18;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #1F1F1F;
+            color: #F6EFE6;
             opacity: 0.4;
             font-size: 14px;
         }
@@ -128,8 +128,8 @@
             display: inline-block;
             width: 24px;
             height: 24px;
-            border-right: 2px solid #1F1F1F;
-            border-bottom: 2px solid #1F1F1F;
+            border-right: 2px solid #F6EFE6;
+            border-bottom: 2px solid #F6EFE6;
             transform: rotate(45deg);
             opacity: 0.3;
             animation: bounce 2s infinite;
@@ -159,8 +159,8 @@
 
         /* Story Section */
         .story {
-            background: #1F1F1F;
-            color: #F6EFE6;
+            background: #F6EFE6;
+            color: #1F1F1F;
             padding: 120px 48px;
         }
 
@@ -247,7 +247,8 @@
         /* Countries Preview */
         .countries {
             padding: 80px 48px 120px;
-            background: #EDE4D8;
+            background: #F6EFE6;
+            color: #1F1F1F;
         }
 
         .countries-inner {
@@ -279,7 +280,7 @@
         }
 
         .country-card {
-            background: #F6EFE6;
+            background: #EDE4D8;
             border-radius: 12px;
             padding: 24px;
             text-align: center;
@@ -306,7 +307,7 @@
         footer {
             padding: 60px 48px;
             text-align: center;
-            border-top: 1px solid rgba(31, 31, 31, 0.1);
+            border-top: 1px solid rgba(246, 239, 230, 0.15);
         }
 
         .footer-cta {
@@ -320,7 +321,7 @@
         }
 
         .footer-links a {
-            color: #1F1F1F;
+            color: #F6EFE6;
             opacity: 0.5;
             text-decoration: none;
             margin: 0 16px;
@@ -466,9 +467,9 @@
         </div>
         <div class="hero-image">
             <div class="screenshot-carousel" style="position: relative; max-width: 320px; width: 100%;">
-                <img src="/assets/Screen1.png" alt="Meatballs app" class="carousel-img" style="width: 100%; border-radius: 32px; border: 1px solid rgba(31, 31, 31, 0.12); animation: fade1 12s infinite;">
-                <img src="/assets/Screen2.png" alt="Meatballs app" class="carousel-img" style="position: absolute; top: 0; left: 0; width: 100%; border-radius: 32px; border: 1px solid rgba(31, 31, 31, 0.12); animation: fade2 12s infinite;">
-                <img src="/assets/Screen3.png" alt="Meatballs app" class="carousel-img" style="position: absolute; top: 0; left: 0; width: 100%; border-radius: 32px; border: 1px solid rgba(31, 31, 31, 0.12); animation: fade3 12s infinite;">
+                <img src="/assets/Screen1.png" alt="Meatballs app" class="carousel-img" style="width: 100%; border-radius: 32px; animation: fade1 12s infinite;">
+                <img src="/assets/Screen2.png" alt="Meatballs app" class="carousel-img" style="position: absolute; top: 0; left: 0; width: 100%; border-radius: 32px; animation: fade2 12s infinite;">
+                <img src="/assets/Screen3.png" alt="Meatballs app" class="carousel-img" style="position: absolute; top: 0; left: 0; width: 100%; border-radius: 32px; animation: fade3 12s infinite;">
             </div>
         </div>
     </section>
