--- a/press/index.html
+++ b/press/index.html
@@ -15,8 +15,8 @@
 
         body {
             font-family: 'Libre Caslon Text', Georgia, serif;
-            background-color: #F6EFE6;
-            color: #1F1F1F;
+            background-color: #1F1F1F;
+            color: #F6EFE6;
             line-height: 1.7;
         }
 
@@ -39,7 +39,7 @@
         nav a {
             margin-left: 32px;
             text-decoration: none;
-            color: #1F1F1F;
+            color: #F6EFE6;
             opacity: 0.6;
             font-size: 14px;
             transition: opacity 0.2s;
@@ -107,8 +107,8 @@
 
         /* Quick Facts */
         .facts {
-            background: #1F1F1F;
-            color: #F6EFE6;
+            background: #F6EFE6;
+            color: #1F1F1F;
             padding: 60px 48px;
         }
 
@@ -165,7 +165,7 @@
         .story blockquote {
             font-size: 24px;
             font-style: italic;
-            border-left: 3px solid #1F1F1F;
+            border-left: 3px solid #F6EFE6;
             padding-left: 24px;
             margin: 40px 0;
             opacity: 0.9;
@@ -173,7 +173,8 @@
 
         /* What Makes It Different */
         .difference {
-            background: #EDE4D8;
+            background: #F6EFE6;
+            color: #1F1F1F;
             padding: 100px 48px;
         }
 
@@ -253,8 +254,8 @@
 
         /* Contact */
         .contact {
-            background: #1F1F1F;
-            color: #F6EFE6;
+            background: #F6EFE6;
+            color: #1F1F1F;
             padding: 80px 48px;
         }
 
@@ -279,7 +280,7 @@
         }
 
         .contact a {
-            color: #F6EFE6;
+            color: #1F1F1F;
         }
 
         .contact-list {
@@ -473,9 +474,9 @@
     <!-- Copy-paste summary -->
     <section class="copy-paste-section" style="padding: 20px 48px 0;">
         <div style="max-width: 1200px; margin: 0 auto;">
-            <details style="background: #EDE4D8; border-radius: 8px; padding: 20px 24px;">
+            <details style="background: rgba(246,239,230,0.1); border: 1px solid rgba(246,239,230,0.2); border-radius: 8px; padding: 20px 24px;">
                 <summary style="cursor: pointer; font-size: 14px; font-weight: 700; opacity: 0.7;">Copy-paste summary for articles</summary>
-                <p style="font-size: 15px; line-height: 1.8; margin-top: 16px; padding-top: 16px; border-top: 1px solid rgba(31,31,31,0.1);">
+                <p style="font-size: 15px; line-height: 1.8; margin-top: 16px; padding-top: 16px; border-top: 1px solid rgba(246,239,230,0.2);">
                     <strong>Meatballs</strong> is an iOS app with 47 meatball recipes from 47 countries -each with cultural context and history. Created by a Swedish developer inspired by his grandmother's köttbullar. One-time purchase (29 kr / $2.99), no subscriptions, no ads, no tracking. Available on the App Store.
                 </p>
             </details>
@@ -483,11 +484,11 @@
     </section>
 
     <!-- The Story -->
-    <section class="story-section" style="background: #1F1F1F; color: #F6EFE6; padding: 100px 48px;">
+    <section class="story-section" style="background: #F6EFE6; color: #1F1F1F; padding: 100px 48px;">
         <div class="story-grid" style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: start;">
             <div>
-                <p class="section-eyebrow" style="color: #F6EFE6;">The Story</p>
-                <h2 class="section-title" style="color: #F6EFE6;">It started with a grandmother's kitchen</h2>
+                <p class="section-eyebrow" style="color: #1F1F1F;">The Story</p>
+                <h2 class="section-title" style="color: #1F1F1F;">It started with a grandmother's kitchen</h2>
 
                 <p style="font-size: 17px; margin-bottom: 24px; opacity: 0.85; line-height: 1.8;">
                     The smell of sizzling meat. The sound of a pan. The feeling of being exactly where you belong. That's where Meatballs started -with a memory of my grandmother's Swedish köttbullar.
@@ -498,7 +499,7 @@
                 </p>
             </div>
             <div style="padding-top: 48px;">
-                <blockquote style="font-size: 22px; font-style: italic; border-left: 3px solid #F6EFE6; padding-left: 24px; margin-bottom: 40px; opacity: 0.9; line-height: 1.6;">
+                <blockquote style="font-size: 22px; font-style: italic; border-left: 3px solid #1F1F1F; padding-left: 24px; margin-bottom: 40px; opacity: 0.9; line-height: 1.6;">
                     "Food apps have become content factories. I wanted the opposite -a book that happens to be an app. Where the notes matter. Where the history matters."
                 </blockquote>
 
@@ -538,18 +539,18 @@
     </section>
 
     <!-- Screenshots Preview -->
-    <section class="screenshots-section" style="padding: 80px 48px; background: #F6EFE6;">
+    <section class="screenshots-section" style="padding: 80px 48px;">
         <div style="max-width: 1200px; margin: 0 auto;">
             <p class="section-eyebrow">The App</p>
             <h2 class="section-title">A quick look inside</h2>
 
             <div class="screenshots-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 32px; margin-top: 48px;">
-                <img src="/assets/Screen1.png" alt="Meatballs app - Recipe list" style="width: 100%; border-radius: 24px; border: 1px solid rgba(31, 31, 31, 0.12);">
-                <img src="/assets/Screen2.png" alt="Meatballs app - Recipe detail" style="width: 100%; border-radius: 24px; border: 1px solid rgba(31, 31, 31, 0.12);">
-                <img src="/assets/Screen3.png" alt="Meatballs app - Cook mode" style="width: 100%; border-radius: 24px; border: 1px solid rgba(31, 31, 31, 0.12);">
+                <img src="/assets/Screen1.png" alt="Meatballs app - Recipe list" style="width: 100%; border-radius: 24px;">
+                <img src="/assets/Screen2.png" alt="Meatballs app - Recipe detail" style="width: 100%; border-radius: 24px;">
+                <img src="/assets/Screen3.png" alt="Meatballs app - Cook mode" style="width: 100%; border-radius: 24px;">
             </div>
             <p style="text-align: center; margin-top: 24px; font-size: 14px; opacity: 0.5;">
-                High-resolution versions available in <a href="/press/screenshots.zip" style="color: #1F1F1F;">Press Assets</a>
+                High-resolution versions available in <a href="/press/screenshots.zip" style="color: #F6EFE6;">Press Assets</a>
             </p>
         </div>
     </section>
@@ -560,19 +561,19 @@
         <h2 class="section-title">Ways to write about this</h2>
 
         <div class="angles-grid" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 32px; margin-top: 48px;">
-            <div style="background: #EDE4D8; padding: 28px; border-radius: 12px;">
+            <div style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); padding: 28px; border-radius: 12px;">
                 <h3 style="font-size: 16px; font-weight: 700; margin-bottom: 12px;">The nostalgia angle</h3>
                 <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">A Swedish developer builds an app based on memories of his grandmother's kitchen -and discovers the whole world shares the same comfort food.</p>
             </div>
-            <div style="background: #EDE4D8; padding: 28px; border-radius: 12px;">
+            <div style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); padding: 28px; border-radius: 12px;">
                 <h3 style="font-size: 16px; font-weight: 700; margin-bottom: 12px;">The anti-subscription angle</h3>
                 <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">In an era of subscription fatigue, one indie app bets on the old model: pay once, own forever. No ads, no tracking, no recurring charges.</p>
             </div>
-            <div style="background: #EDE4D8; padding: 28px; border-radius: 12px;">
+            <div style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); padding: 28px; border-radius: 12px;">
                 <h3 style="font-size: 16px; font-weight: 700; margin-bottom: 12px;">The constraint angle</h3>
                 <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">While competitors race to add more recipes, this app does the opposite: just 47 recipes, one per country. The limitation is the point.</p>
             </div>
-            <div style="background: #EDE4D8; padding: 28px; border-radius: 12px;">
+            <div style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); padding: 28px; border-radius: 12px;">
                 <h3 style="font-size: 16px; font-weight: 700; margin-bottom: 12px;">The food-as-culture angle</h3>
                 <p style="font-size: 15px; opacity: 0.75; line-height: 1.6;">How one humble dish -ground meat rolled into balls -became comfort food on every continent. An anthropological journey through the kitchen.</p>
             </div>
@@ -585,39 +586,39 @@
         <h2 class="section-title">From the developer</h2>
 
         <div style="margin-top: 40px;">
-            <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #1F1F1F; padding-left: 24px; margin-bottom: 32px; opacity: 0.85;">
+            <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #F6EFE6; padding-left: 24px; margin-bottom: 32px; opacity: 0.85;">
                 "It started in my grandmother's kitchen. That smell, that feeling -I realized every culture has that. Kofta, polpette, albondigas. Different names, same meaning: home."
             </blockquote>
-            <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #1F1F1F; padding-left: 24px; margin-bottom: 32px; opacity: 0.85;">
+            <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #F6EFE6; padding-left: 24px; margin-bottom: 32px; opacity: 0.85;">
                 "Food apps have become content factories. I wanted the opposite -a book that happens to be an app. Where quality beats quantity."
             </blockquote>
-            <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #1F1F1F; padding-left: 24px; opacity: 0.85;">
+            <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #F6EFE6; padding-left: 24px; opacity: 0.85;">
                 "47 countries, 47 recipes. That's it. The constraint is the whole point. It forces you to be thoughtful about what you include."
             </blockquote>
         </div>
     </section>
 
     <!-- Assets -->
-    <section class="assets" style="background: #EDE4D8; padding: 100px 48px;">
+    <section class="assets" style="padding: 100px 48px;">
         <div style="max-width: 1200px; margin: 0 auto;">
             <p class="section-eyebrow">Press Assets</p>
             <h2 class="section-title">Everything you need</h2>
 
             <div class="assets-grid">
-                <div class="asset-card" style="background: #F6EFE6;">
+                <div class="asset-card" style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); color: #F6EFE6;">
                     <h3>Press Kit</h3>
                     <p>App icon, screenshots, and logos in various formats</p>
-                    <a href="/press/meatballs-presskit.zip">Download ZIP</a>
+                    <a href="/press/meatballs-presskit.zip" style="color: #F6EFE6; border-bottom-color: #F6EFE6;">Download ZIP</a>
                 </div>
-                <div class="asset-card" style="background: #F6EFE6;">
+                <div class="asset-card" style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); color: #F6EFE6;">
                     <h3>App Icon</h3>
                     <p>1024×1024 PNG, with and without rounded corners</p>
-                    <a href="/press/app-icon.png">Download PNG</a>
+                    <a href="/press/app-icon.png" style="color: #F6EFE6; border-bottom-color: #F6EFE6;">Download PNG</a>
                 </div>
-                <div class="asset-card" style="background: #F6EFE6;">
+                <div class="asset-card" style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); color: #F6EFE6;">
                     <h3>Screenshots</h3>
                     <p>iPhone 15 Pro, showing key features</p>
-                    <a href="/press/screenshots.zip">Download ZIP</a>
+                    <a href="/press/screenshots.zip" style="color: #F6EFE6; border-bottom-color: #F6EFE6;">Download ZIP</a>
                 </div>
             </div>
         </div>
