Use $2.99 instead of 29 kr in press quick facts

--- a/press/index.html
+++ b/press/index.html
@@ -463,7 +463,7 @@
             </p>
             <!-- Quick facts inline -->
             <p style="font-size: 14px; opacity: 0.6; margin-top: 24px; line-height: 1.8;">
-                47 countries · 47 recipes · 29 kr one-time · No subscriptions · No ads · No tracking
+                47 countries · 47 recipes · $2.99 one-time · No subscriptions · No ads · No tracking
             </p>
         </div>
         <div class="hero-image">
