Refine press page copy for journalists

--- a/press/index.html
+++ b/press/index.html
@@ -459,11 +459,11 @@
             <p class="hero-eyebrow">Press Kit</p>
             <h1 class="hero-headline">The world's comfort food, in one app</h1>
             <p class="hero-subheadline">
-                Meatballs is a book that happens to be an app, exploring one dish across 47 countries. 47 recipes, each with its cultural story. Built in Stockholm by one person who started with his grandmother's recipe.
+                Meatballs is a book that happens to be an app — documenting one dish across 47 countries. 47 recipes, each paired with its cultural story. Built in Stockholm by a single developer who started with his grandmother's recipe.
             </p>
             <!-- Quick facts inline -->
             <p style="font-size: 14px; opacity: 0.6; margin-top: 24px; line-height: 1.8;">
-                47 countries · 47 recipes · $2.99 one-time · No subscriptions · No ads · No tracking
+                47 countries · 47 recipes · No subscriptions · No ads · No tracking · $2.99 one-time
             </p>
         </div>
         <div class="hero-image">
@@ -519,7 +519,7 @@
             </div>
             <div class="difference-grid">
                 <div class="difference-item">
-                    <h3>Editorial, not algorithmic</h3>
+                    <h3>Intentionally editorial, not algorithmic</h3>
                     <p>47 recipes, hand-selected. No user-generated content, no infinite scroll, no recommendations. Like a cookbook with a clear point of view.</p>
                 </div>
                 <div class="difference-item">
@@ -584,6 +584,7 @@
     <section class="quotes-section" style="padding: 60px 48px 100px; max-width: 800px; margin: 0 auto;">
         <p class="section-eyebrow">Ready-to-use quotes</p>
         <h2 class="section-title">From the developer</h2>
+        <p style="font-size: 14px; opacity: 0.5; margin-top: -8px;">— Tommy Vilkensen, creator of Meatballs</p>
 
         <div style="margin-top: 40px;">
             <blockquote style="font-size: 18px; font-style: italic; border-left: 3px solid #F6EFE6; padding-left: 24px; margin-bottom: 32px; opacity: 0.85;">
