Refine B2C copy - break symmetry, add warmth

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
     <section class="hero">
         <div class="hero-content">
             <p class="hero-eyebrow">The world's comfort food</p>
-            <h1 class="hero-headline">Your grandmother made them. So did mine. So did everyone's.</h1>
+            <h1 class="hero-headline">Your grandmother made them. So did mine. So did almost everyone.</h1>
             <p class="hero-subheadline">47 countries. One dish. A million memories.</p>
             <a href="#" class="app-store-btn">
                 <!-- Replace with actual App Store badge -->
@@ -490,9 +490,9 @@
     <section class="story" id="story">
         <div class="story-inner">
             <p class="story-eyebrow">You already know this feeling</p>
-            <p class="story-quote">"The smell of my grandmother's kitchen. The sound of sizzling. The feeling of being exactly where you belong."</p>
+            <p class="story-quote">"The smell of my grandmother's kitchen. Something sizzling on the stove. The feeling of being exactly where you belong."</p>
             <p class="story-text">
-                That memory lives somewhere in all of us. And here's the beautiful part: every culture has it. In Lebanon, it's kofta. In Italy, polpette. In Mexico, albondigas. Different kitchens, different spices. Same meaning. Comfort. Family. Home.
+                That memory lives somewhere in all of us. And here's the beautiful part: every culture has it. In Lebanon, it's kofta. In Italy, polpette. In Mexico, albondigas. Different kitchens, different spices. Still the same thing: comfort, family, home.
             </p>
             <p class="story-text" style="margin-top: 24px;">
                 This is 47 of those stories. One from each country. Not a collection of ingredients, but a journey through the kitchens of the world. Each one a window into how another family, somewhere else, makes someone feel at home.
@@ -520,7 +520,7 @@
             <div class="feature">
                 <div class="feature-icon">◔</div>
                 <h3 class="feature-title">Made to get messy</h3>
-                <p class="feature-text">Screen stays on while you cook. Current step on your lock screen. Large text for flour-covered hands. No ads. Just you and the food.</p>
+                <p class="feature-text">Screen stays on while you cook. Current step on your lock screen. Large text for flour-covered hands. No ads. No distractions. Just you and the food.</p>
             </div>
         </div>
     </section>
@@ -583,6 +583,7 @@
         <a href="#" class="app-store-btn">
             <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download on the App Store">
         </a>
+        <p style="margin-top: 16px; font-size: 14px; opacity: 0.5;">Pay once. Own it forever.</p>
         <div class="footer-links">
             <a href="/press">Press</a>
             <a href="/support">Support</a>
