Remove Swedish pricing, use USD only for international press

--- a/press/index.html
+++ b/press/index.html
@@ -477,7 +477,7 @@
             <details style="background: rgba(246,239,230,0.1); border: 1px solid rgba(246,239,230,0.2); border-radius: 8px; padding: 20px 24px;">
                 <summary style="cursor: pointer; font-size: 14px; font-weight: 700; opacity: 0.7;">Copy-paste summary for articles</summary>
                 <p style="font-size: 15px; line-height: 1.8; margin-top: 16px; padding-top: 16px; border-top: 1px solid rgba(246,239,230,0.2);">
-                    <strong>Meatballs</strong> is an iOS app with 47 meatball recipes from 47 countries -each with cultural context and history. Created by a Swedish developer inspired by his grandmother's köttbullar. One-time purchase (29 kr / $2.99), no subscriptions, no ads, no tracking. Available on the App Store.
+                    <strong>Meatballs</strong> is an iOS app with 47 meatball recipes from 47 countries -each with cultural context and history. Created by a Swedish developer inspired by his grandmother's köttbullar. One-time purchase ($2.99), no subscriptions, no ads, no tracking. Available on the App Store.
                 </p>
             </details>
         </div>
@@ -528,7 +528,7 @@
                 </div>
                 <div class="difference-item">
                     <h3>Buy once, own forever</h3>
-                    <p>29 kr ($2.99). No subscription, no in-app purchases, no ads. The business model is selling the app, not the user's attention.</p>
+                    <p>$2.99. No subscription, no in-app purchases, no ads. The business model is selling the app, not the user's attention.</p>
                 </div>
                 <div class="difference-item">
                     <h3>Built to cook from</h3>
