Update screenshots device to iPhone 17 Pro Max

--- a/press/index.html
+++ b/press/index.html
@@ -618,7 +618,7 @@
                 </div>
                 <div class="asset-card" style="background: rgba(246,239,230,0.08); border: 1px solid rgba(246,239,230,0.15); color: #F6EFE6;">
                     <h3>Screenshots</h3>
-                    <p>iPhone 15 Pro, showing key features</p>
+                    <p>iPhone 17 Pro Max, showing key features</p>
                     <a href="/press/screenshots.zip" style="color: #F6EFE6; border-bottom-color: #F6EFE6;">Download ZIP</a>
                 </div>
             </div>
